# PakSeek

./: Cargo.toml  README.md  package.json  tauri.conf.json
backend/: Cargo.toml  cargo_toml.txt  dependency_map.rs  main.rs  pak_parser.rs  preview.rs  project_structure.md  tauri.conf.json  utoc_parser.rs
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: tauriClient.ts
frontend/src/components/: AssetTable.tsx  DependencyGraph.tsx  PreviewPanel.tsx  SearchBar.tsx  Sidebar.tsx  TitleBar.tsx
frontend/src/hooks/: useTheme.tsx
frontend/src/pages/: AssetBrowser.tsx  GraphView.tsx  Home.tsx  Settings.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
